--- a/index.html
+++ b/index.html
@@ -341,7 +341,10 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/formspree@1.0.0"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<!-- JavaScript -->
+
+	
+	
+	<!-- JavaScript -->
 <script>
   // Check if the opt-in message has been dismissed
   var optinDismissed = sessionStorage.getItem('optinDismissed');
@@ -355,25 +358,25 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
     optinContent.innerHTML = `
       <h2>Stay Updated and Connect with Me!</h2>
       <p>Sign up to receive updates, collaborate, or connect with me. Leave your email below:</p>
-      <form id="optin-form" action="https://formspree.io/f/xjvqbbvn" method="POST">
+      <form id="optin-form" action="https://formspree.io/f/{your-formspree-email}" method="POST">
         <input type="hidden" name="_subject" value="New Opt-In Submission">
         <input type="hidden" name="_next" value="https://thartymba.github.io/index.html">
         <div class="form-group">
           <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
-        <div id="optin-close">&times;</div>
       </form>
     `;
 
     optinOverlay.appendChild(optinContent);
     document.body.appendChild(optinOverlay);
 
-    // Add event listener to close the opt-in message
-    var optinClose = document.getElementById('optin-close');
-    optinClose.addEventListener('click', function() {
-      optinOverlay.style.display = 'none';
-      sessionStorage.setItem('optinDismissed', 'true');
+    // Add event listener to close the opt-in message by clicking outside the message
+    optinOverlay.addEventListener('click', function(event) {
+      if (event.target === optinOverlay) {
+        optinOverlay.style.display = 'none';
+        sessionStorage.setItem('optinDismissed', 'true');
+      }
     });
 
     // Prevent form submission on enter key press
@@ -390,6 +393,7 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
     });
   }
 </script>
+
 
 
 
