--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
     optinContent.innerHTML = `
       <h2>Stay Updated and Connect with Me!</h2>
       <p>Sign up to receive updates, collaborate, or connect with me. Leave your email below:</p>
-      <form id="optin-form" action="https://formspree.io/f/{your-formspree-email}" method="POST">
+      <form id="optin-form" action="https://formspree.io/f/xjvqbbvn" method="POST">
         <input type="hidden" name="_subject" value="New Opt-In Submission">
         <input type="hidden" name="_next" value="https://thartymba.github.io/index.html">
         <div class="form-group">
