--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Tom Harty - Personal Website</title>
+	<meta name="description" content="Tom Harty's Personal Website">
+	<meta name="keywords" content="Tom Harty, Personal, Website">
+	<meta name="author" content="Tom Harty">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!-- Favicon -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+
+	
+	<!-- CSS Stylesheets -->
+	<link rel="stylesheet" href="bootstrap.min.css">
+	<link rel="stylesheet" href="styles.css">
+
+	
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+
+	<!-- Scripts -->
+	<script src="script.js"></script>
+
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8940733557549458"
+     crossorigin="anonymous"></script>
+
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NYXMTXR0ZN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NYXMTXR0ZN');
+</script>
+
+	<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '856123186020765');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
+
+	<!-- Chatbot Script -->
+	<script type="text/javascript" data-cfasync="false" src="https://humanchat.net/build/js/humanbot_latest.js?v=1.4.8" crossorigin="anonymous"></script>
+	<script>
+		var aiBot = new AiBot({embedId: 'FXXQf8gm3YMY', remoteBaseUrl: 'https://humanchat.net/', version: '1.4.8'});
+	</script>
 
