--- a/resume.html
+++ b/resume.html
@@ -61,3 +61,17 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 		var aiBot = new AiBot({embedId: 'FXXQf8gm3YMY', remoteBaseUrl: 'https://humanchat.net/', version: '1.4.8'});
 	</script>
 
+		<!-- Main Content -->
+	<main>
+	<section id="resume" class="section-padding">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h2>Resume</h2>
+					<p>View my resume <a href="Tom Harty res.docx" download>here</a>.</p>
+					<p>Coming soon - An excerpt from my dissertation for your viewing.</p>
+					<p>Coming soon - An excerpt from my management philosophies book for your viewing.</p>
+				</div>
+			</div>
+		</div>
+	</section>
