--- a/resume.html
+++ b/resume.html
@@ -75,3 +75,28 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 			</div>
 		</div>
 	</section>
+		</main>
+
+<!-- Footer -->
+<footer class="footer" style="background-color: #333;">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="footer-links">
+          <a href="mailto:tom.hartymba@gmail.com">tom.hartymba@gmail.com</a>
+          <a href="https://www.linkedin.com/in/thomas-harty-ms-54809a11b/" target="_blank">LinkedIn Profile</a>
+          <a href="https://www.lordsofland.net" target="_blank">Lord of Land</a>
+          <a href="https://www.facebook.com/profile.php?id=100092332181854" target="_blank">Lord of Land Facebook Page</a>
+          <a href="#">Instagram</a>
+          <a href="https://www.hartyboysgaming.com" target="_blank">Harty Boys Gaming</a>
+          <a href="https://www.facebook.com/profile.php?id=100092415555183" target="_blank">Harty Boys Gaming Facebook Page</a>
+          <a href="#">Instagram</a>
+          <a href="privacy.html">Privacy Policy</a>
+        </div>
+        <p style="color: #fff;">&copy; 2023 - <span id="current-year"></span> Tom Harty | All rights reserved</p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+	
