--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<!-- Header -->
-<header>
+
+	<!-- Header -->
+	<header>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container">
 			<a class="navbar-brand" href="#">
@@ -75,9 +76,31 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 					<span class="ml-2">Tom Harty</span>
 				</div>
 			</a>
+			
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="resume.html">Resume</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="projects.html">Projects</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="opportunities.html">Opportunities</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="privacy.html">Privacy</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 </header>
+
 
 
 
