--- a/resume.html
+++ b/resume.html
@@ -61,6 +61,42 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 		var aiBot = new AiBot({embedId: 'FXXQf8gm3YMY', remoteBaseUrl: 'https://humanchat.net/', version: '1.4.8'});
 	</script>
 
+	
+	<!-- Header -->
+	<header>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container">
+			<a class="navbar-brand" href="#">
+				<div class="d-flex align-items-center">
+					<img src="1538960833002.jpeg" alt="Tom Harty" class="profile-picture">
+					<span class="ml-2">Tom Harty</span>
+				</div>
+			</a>
+			
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="resume.html">Resume</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="projects.html">Projects</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="opportunities.html">Opportunities</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="privacy.html">Privacy</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+</header>
+
 		<!-- Main Content -->
 	<main>
 	<section id="resume" class="section-padding">
