--- a/resume.html
+++ b/resume.html
@@ -63,10 +63,10 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 
 	
 	<!-- Header -->
-	<header>
+<header>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="index.html">
 				<div class="d-flex align-items-center">
 					<img src="1538960833002.jpeg" alt="Tom Harty" class="profile-picture">
 					<span class="ml-2">Tom Harty</span>
@@ -96,6 +96,7 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 		</div>
 	</nav>
 </header>
+
 
 		<!-- Main Content -->
 	<main>
