--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 <body>
 
 	<!-- Header -->
-	<header>
+<header>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="index.html">
 				<div class="d-flex align-items-center">
 					<img src="1538960833002.jpeg" alt="Tom Harty" class="profile-picture">
 					<span class="ml-2">Tom Harty</span>
@@ -100,7 +100,6 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 		</div>
 	</nav>
 </header>
-
 
 
 
