--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,99 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 	</nav>
 </header>
 
+<section id="portfolio" class="section-padding">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h2>Portfolio</h2>
+				<p>Here you can find examples of my work and projects I've completed.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+<h3><a href="https://www.youtube.com/@LordsofLand?sub_confirmation=1" target="_blank">Lord of Land</a></h3>
+<p>Drawing upon my extensive expertise gained through a distinguished career and an unwavering dedication to continuous learning, I am driven by a genuine passion to uplift and inspire others. Lord of Land stands as a beacon of light in a world where financial literacy, self-discovery, and holistic well-being are of utmost importance.As you delve into the depths of our resources, you will find a wealth of articles, videos, and practical advice carefully curated to address your specific needs. From mastering the art of budgeting, investing, and wealth creation to nurturing your mental and physical well-being, Lord of Land covers a vast array of topics essential to your personal and financial success. By immersing yourself in the wisdom shared within these virtual walls, you will gain the confidence and knowledge needed to make informed decisions, overcome challenges, and transform your life. I firmly believe that education, when combined with action and a supportive community, has the power to unlock possibilities.</p>
+<!-- YouTube carousel -->
+<div id="youtube-carousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#youtube-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#youtube-carousel" data-slide-to="1"></li>
+    <li data-target="#youtube-carousel" data-slide-to="2"></li>
+  </ol>
+  <!-- Slides -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2fYdenDi97Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/160jHmFboTk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pmAixGcVIhs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+  <!-- Controls -->
+  <a class="carousel-control-prev" href="#youtube-carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#youtube-carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
+			</div>
+			<div class="col-md-6">
+<h3><a href="https://www.youtube.com/@HartyBoysGaming2.0?sub_confirmation=1" target="_blank">Harty Boys Gaming</a></h3>
+<p>In a world where education extends beyond the classroom, I'm helping my children with their own youtube channel for a catalyst of growth, innovation, and entrepreneurial spirit. While schools undoubtedly play a vital role in our children's development, I firmly believe that the home is a rich source of learning opportunities waiting to be tapped. That's why I have embraced their YT channel as a platform where my children can embark on a thrilling journey of discovery, blending the excitement of gaming with invaluable insights into business acumen, such as branding, marketing, advertising, and more.It is a channel dedicated to fostering a sense of empowerment, self-belief, and lifelong learning. I'm striving to instill in my children the confidence to pursue their dreams, challenge conventions, and embrace the boundless possibilities that await them. By nurturing their business instincts, I'm hoping to equip them with valuable skills that extend far beyond the digital realm.</p>
+<!-- Children's YouTube carousel -->
+<div id="children-youtube-carousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#children-youtube-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#children-youtube-carousel" data-slide-to="1"></li>
+    <li data-target="#children-youtube-carousel" data-slide-to="2"></li>
+  </ol>
+  <!-- Slides -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/i3hBFZWP7C4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/uQwyvOVUrHo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="youtube-video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6Yk8q6boRQU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+  <!-- Controls -->
+  <a class="carousel-control-prev" href="#children-youtube-carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#children-youtube-carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
+</div>
+</div>
+</section>
 
 
 	<!-- Footer -->
