--- a/opportunities.html
+++ b/opportunities.html
@@ -103,6 +103,19 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 
 
 
+<section id="collaboration" class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Collaboration, Freelance, and Other Opportunities</h2>
+		<p>Please contact if you would like to discuss Collaboration ideas, such as appearing as a guest on your podcast or radio broadcast, writing a guest blog post, interviews, adjunct professor instructing, or other ideas.</p>
+	      <p>I am also currently open to take on some freelance work, whether it's hosting a google ads campaign, building a basic website, looking for basic designs or optimization opportunities, or hosting and training a chatbot for your site.</p>
+	      <p>If there's any other opportunities you think we could make a big impact on together, then please reach out with your idea, whether it's from real estate ventures, start-up investing, or other opportunities. Together, I am sure only the sky is the limit.</p>
+	              </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 	<!-- Footer -->
 <footer class="footer" style="background-color: #333;">
