--- a/projects.html
+++ b/projects.html
@@ -194,6 +194,59 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 </div>
 </div>
 </section>
+<section id="fiverr" class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Fiverr</h2>
+        <p>Check out my Fiverr profile and gigs below:</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <!-- Fiverr carousel -->
+        <div id="fiverr-carousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#fiverr-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#fiverr-carousel" data-slide-to="1"></li>
+            <li data-target="#fiverr-carousel" data-slide-to="2"></li>
+          </ol>
+          <!-- Slides -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="fiverr-gig">
+                <h3><a href="https://www.fiverr.com/tomharty632/build-a-professional-static-website-on-github" target="_blank">Fiverr Gig 1</a></h3>
+                <p>Whether you need a personal portfolio/resume page to wow employers or a basic business page for customers, I've got the solution. I can develop a beautiful and responsive static website hosted for free on github. I will build on github and then transfer you the completed repository.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="fiverr-gig">
+                <h3><a href="https://www.fiverr.com/tomharty632/provide-a-rent-comparables-report-for-your-current-or-potential-rental-unit" target="_blank">Fiverr Gig 2</a></h3>
+                <p>I can run comps for your current or future property to determine current market rental rates. I can run a cashflow analysis to help you make determinations on your deal or what to do with your current property. And for a broad view, I can run both options for you at a discount so that you can see a total picture for decision-making purposes.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="fiverr-gig">
+                <h3><a href="https://www.fiverr.com/tomharty632/run-a-google-ads-campaign-for-you" target="_blank">Fiverr Gig 3</a></h3>
+                <p>I will run a google ads campaign on your behalf, the majority of the gig cost is going right back into the google ads campaign to market. I will use my google ads account complete with my scripts, data, and knowledge to optimize a campaign on your behalf. I will be able to provide you with those campaign results at the end.</p>
+              </div>
+            </div>
+          </div>
+          <!-- Controls -->
+          <a class="carousel-control-prev" href="#fiverr-carousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#fiverr-carousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 	<!-- Footer -->
