--- a/projects.html
+++ b/projects.html
@@ -209,12 +209,11 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 </div>
 </div>
 </div>
-</section>
-<section id="fiverr" class="section-padding">
+	<section id="fiverr" class="section-padding">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2>Fiverr</h2>
+        <h2><a href="https://www.fiverr.com/tomharty632" target="_blank">Fiverr</a></h2>
         <p>Check out my Fiverr profile and gigs below:</p>
       </div>
     </div>
@@ -233,8 +232,8 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
             <div class="carousel-item active">
               <div class="fiverr-gig">
                 <h3><a href="https://www.fiverr.com/tomharty632/build-a-professional-static-website-on-github" target="_blank">Fiverr Gig 1</a></h3>
-                <p>Whether you need a personal portfolio/resume page to wow employers or a basic business page for customers, I've got the solution. I can develop a beautiful and responsive static website hosted for free on github. I will build on github and then transfer you the completed repository.</p>
-              </div>
+                  <p>Whether you need a personal portfolio/resume page to wow employers or a basic business page for customers, I've got the solution. I can develop a beautiful and responsive static website hosted for free on github. I will build on github and then transfer you the completed repository.</p>
+          </div>
             </div>
             <div class="carousel-item">
               <div class="fiverr-gig">
@@ -245,10 +244,10 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
             <div class="carousel-item">
               <div class="fiverr-gig">
                 <h3><a href="https://www.fiverr.com/tomharty632/run-a-google-ads-campaign-for-you" target="_blank">Fiverr Gig 3</a></h3>
-                <p>I will run a google ads campaign on your behalf, the majority of the gig cost is going right back into the google ads campaign to market. I will use my google ads account complete with my scripts, data, and knowledge to optimize a campaign on your behalf. I will be able to provide you with those campaign results at the end.</p>
+                 <p>I will run a google ads campaign on your behalf, the majority of the gig cost is going right back into the google ads campaign to market. I will use my google ads account complete with my scripts, data, and knowledge to optimize a campaign on your behalf. I will be able to provide you with those campaign results at the end.</p>
               </div>
             </div>
-          </div>
+	 </div>
           <!-- Controls -->
           <a class="carousel-control-prev" href="#fiverr-carousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
