--- a/projects.html
+++ b/projects.html
@@ -231,19 +231,19 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="fiverr-gig">
-                <h3><a href="https://www.fiverr.com/tomharty632/build-a-professional-static-website-on-github" target="_blank">Fiverr Gig 1</a></h3>
+                <h3><a href="https://www.fiverr.com/tomharty632/build-a-professional-static-website-on-github" target="_blank">I will build a professional static website on github</a></h3>
                   <p>Whether you need a personal portfolio/resume page to wow employers or a basic business page for customers, I've got the solution. I can develop a beautiful and responsive static website hosted for free on github. I will build on github and then transfer you the completed repository.</p>
           </div>
             </div>
             <div class="carousel-item">
               <div class="fiverr-gig">
-                <h3><a href="https://www.fiverr.com/tomharty632/provide-a-rent-comparables-report-for-your-current-or-potential-rental-unit" target="_blank">Fiverr Gig 2</a></h3>
+                <h3><a href="https://www.fiverr.com/tomharty632/provide-a-rent-comparables-report-for-your-current-or-potential-rental-unit" target="_blank">I will provide a rent comparables report for your current or potential rental unit</a></h3>
                 <p>I can run comps for your current or future property to determine current market rental rates. I can run a cashflow analysis to help you make determinations on your deal or what to do with your current property. And for a broad view, I can run both options for you at a discount so that you can see a total picture for decision-making purposes.</p>
               </div>
             </div>
             <div class="carousel-item">
               <div class="fiverr-gig">
-                <h3><a href="https://www.fiverr.com/tomharty632/run-a-google-ads-campaign-for-you" target="_blank">Fiverr Gig 3</a></h3>
+                <h3><a href="https://www.fiverr.com/tomharty632/run-a-google-ads-campaign-for-you" target="_blank">I will organically promote your youtube video through google ads</a></h3>
                  <p>I will run a google ads campaign on your behalf, the majority of the gig cost is going right back into the google ads campaign to market. I will use my google ads account complete with my scripts, data, and knowledge to optimize a campaign on your behalf. I will be able to provide you with those campaign results at the end.</p>
               </div>
             </div>
