--- a/opportunities.html
+++ b/opportunities.html
@@ -66,7 +66,7 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 </head>
 <body>
 
-	<!-- Header -->
+<!-- Header -->
 <header>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container">
@@ -76,7 +76,22 @@ src="https://www.facebook.com/tr?id=856123186020765&ev=PageView&noscript=1"
 					<span class="ml-2">Tom Harty</span>
 				</div>
 			</a>
-			
+			<!-- Put this code anywhere in the body of your page where you want the badge to show up. -->
+
+<div itemscope itemtype='http://schema.org/Person' class='fiverr-seller-widget' style='display: inline-block;'>
+     <a itemprop='url' href=https://www.fiverr.com/tomharty632 rel="nofollow" target="_blank" style='display: inline-block;'>
+        <div class='fiverr-seller-content' id='fiverr-seller-widget-content-0c3843de-a027-4493-8801-8bb9362039e0' itemprop='contentURL' style='display: none;'></div>
+        <div id='fiverr-widget-seller-data' style='display: none;'>
+            <div itemprop='name' >tomharty632</div>
+            <div itemscope itemtype='http://schema.org/Organization'><span itemprop='name'>Fiverr</span></div>
+            <div itemprop='jobtitle'>Seller</div>
+            <div itemprop='description'>Doctoral candidate in business with 2 master's degrees and with almost 20 years of business experience in many fields along with a couple of years experience in programming and coding.</div>
+        </div>
+    </a>
+</div>
+
+<script id='fiverr-seller-widget-script-0c3843de-a027-4493-8801-8bb9362039e0' src='https://widgets.fiverr.com/api/v1/seller/tomharty632?widget_id=0c3843de-a027-4493-8801-8bb9362039e0' data-config='{"category_name":"Video \u0026 Animation"}' async='true' defer='true'></script>
+
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
